@@ -1,4 +1,5 @@
 local lava_mech_armor = require("prototypes.items.lava-mech-armor")
+local enchanted_trains = require("prototypes.items.enchanted-trains")
 
 data:extend({
     require("prototypes.items.foundation-platform"),
@@ -9,6 +10,9 @@ data:extend({
     require("prototypes.items.industrialised-chemical-plan"),
     require("prototypes.items.enchanter"),
     require("prototypes.items.base-magma-ball"),
+    enchanted_trains[1],
+    enchanted_trains[2],
+    enchanted_trains[3],
     lava_mech_armor,
 })
 
