@@ -1,5 +1,6 @@
 data:extend(
     {
-        require("prototypes.tools.lava-science-pack")
+        require("prototypes.tools.lava-science-pack"),
+        require("prototypes.tools.enchanted-science-pack")
     }
 )
